More testing stuffs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="content">
+  <span>infinite-scroller-poc app is running!</span>
+</div>
+
 <ul id="infinite-scroller"
     appInfiniteScroller
     scrollPerecnt="70"
