--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content">
-  <span>infinite-scroller-poc app is running!</span>
+  <span>infinite-scroller-poc app is running! on </span>
+  <span>Angular : {{version}}</span>
 </div>
 
 <ul id="infinite-scroller"
